# farc3

./: Cargo.toml
.github/: README.md
.github/workflows/: main.yml
src/: assignment.rs  constraint.rs  heuristics.rs  lib.rs  system.rs  utils.rs
src/systems/: mod.rs
src/systems/generic/: assignment.rs  constraint.rs  mod.rs  test.rs  utils.rs
src/systems/mines/: assignment.rs  constraint.rs  errors.rs  mod.rs  test.rs  utils.rs
