[package]
name = "farc3"
description = "ARC3 solving for Constraint Satisfaction Problems"
readme = ".github/README.md"
version = "0.1.1"
edition = "2024"

license = "MIT"
homepage = "https://github.com/Just-Helpful/Farc3"
repository = "https://github.com/Just-Helpful/Farc3"

[profile.dev]
incremental = true

[dependencies]
